--- a/src/classes/Constants.cls
+++ b/src/classes/Constants.cls
@@ -1,6 +1,7 @@
 public abstract class Constants { 
-	public static final Id USER_SASHA_KEROV_ID= '005580000010mqd';
+	public static final Id USER_SASHA_KEROV_ID = '005580000010mqd';
 	public static final String ERROR_TIME_IS_BUSY = 'Sorry this time is busy';
+	public static final String ERROR_RESULT_EXIST = 'Sorry this result already exists';
 	public static final Set<String> HIGHT_PRIORITY_EVENT_TYPE = new Set<String>{'Lesson','	Knowledge check'};
 	public static final Set<String> LOW_PRIORITY_EVENT_TYPE = new Set<String>{'Recreation'};
 }
